@@ -17,6 +17,16 @@ def test_get_table_name():
     assert table == AIRPORTS_TABLE
 
 
+def test_table_name_uppercase():
+    table = bcdata.get_table_name(AIRPORTS_PACKAGE.upper())
+    assert table == AIRPORTS_TABLE
+
+
+def test_validate_table_lowercase():
+    table = bcdata.validate_name(AIRPORTS_TABLE.lower())
+    assert table == AIRPORTS_TABLE
+
+
 def test_get_table_name_urlparse():
     # bcdc api query result["object_name"] is not correct WFS layer name,
     # use WFS resource url
